community/lists/devel/att-10419/clang-vt-make.log
  CXX    libvt_mpi_unify_la-vt_unify_markers.lo
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_markers.cc:13:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_handlers.h:20:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_markers.h:23:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac.h:19:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac_scope.h:133:
/Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac_scope.hh:63:40: warning: expression result unused [-Wunused-value]
      m_globDefs->insert( global_def ).first;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~~~~
/Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_markers.cc:251:27: note: in instantiation of member function 'TokenFactoryScopeC<DefRec_DefMarkerS>::create' requested here
            m_tkfacScope->create( loc_defs[i] );
                          ^
1 warning generated.
  CXX    libvt_mpi_unify_la-vt_unify_sync.lo
  CXX    libvt_mpi_unify_la-vt_unify_tkfac.lo
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac.cc:14:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac.h:19:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac_scope.h:133:
/Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac_scope.hh:63:40: warning: expression result unused [-Wunused-value]
      m_globDefs->insert( global_def ).first;
      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^~~~~
/Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac.cc:144:35: note: in instantiation of member function 'TokenFactoryScopeC<DefRec_BaseS>::create' requested here
            buffer_size += scope->getPackSize( *proc_it );
                                  ^
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac.cc:13:
In file included from /Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify.h:29:
In file included from /usr/include/c++/4.2.1/map:64:
In file included from /usr/include/c++/4.2.1/bits/stl_tree.h:71:
/usr/include/c++/4.2.1/bits/stl_function.h:227:20: error: invalid operands to binary expression ('const DefRec_BaseS' and 'const DefRec_BaseS')
      { return __x < __y; }
               ~~~ ^ ~~~
/usr/include/c++/4.2.1/bits/stl_tree.h:1377:7: note: in instantiation of member function 'std::less<DefRec_BaseS>::operator()' requested here
        if (!_M_impl._M_key_compare(_S_key(__x), __k))
             ^
/usr/include/c++/4.2.1/bits/stl_set.h:430:21: note: in instantiation of member function 'std::_Rb_tree<DefRec_BaseS, DefRec_BaseS, std::_Identity<DefRec_BaseS>, std::less<DefRec_BaseS>, std::allocator<DefRec_BaseS> >::find' requested here
      { return _M_t.find(__x); }
                    ^
/Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac_scope.hh:42:58: note: in instantiation of member function 'std::set<DefRec_BaseS, std::less<DefRec_BaseS>, std::allocator<DefRec_BaseS> >::find' requested here
   typename std::set<T>::const_iterator it = m_globDefs->find( local_def );
                                                         ^
/Users/paul/OMPI/openmpi-trunk-macos10.7-x86-clang//openmpi-trunk/ompi/contrib/vt/vt/tools/vtunify/mpi/../vt_unify_tkfac.cc:144:35: note: in instantiation of member function 'TokenFactoryScopeC<DefRec_BaseS>::create' requested here
            buffer_size += scope->getPackSize( *proc_it );
                                  ^
/usr/include/c++/4.2.1/bits/stl_pair.h:102:5: note: candidate template ignored: failed template argument deduction
    operator<(const pair<_T1, _T2>& __x, const pair<_T1, _T2>& __y)
    ^
/usr/include/c++/4.2.1/bits/stl_iterator.h:288:5: note: candidate template ignored: failed template argument deduction
    operator<(const reverse_iterator<_Iterator>& __x,
    ^
/usr/include/c++/4.2.1/bits/stl_iterator.h:338:5: note: candidate template ignored: failed template argument deduction
    operator<(const reverse_iterator<_IteratorL>& __x,
    ^
1 warning and 1 error generated.
make[6]: *** [libvt_mpi_unify_la-vt_unify_tkfac.lo] Error 1
make[5]: *** [../tools/vtunify/mpi/libvt-mpi-unify.la] Error 2
make[4]: *** [all-recursive] Error 1
make[3]: *** [all] Error 2
make[2]: *** [all-recursive] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all-recursive] Error 1
